bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - ProductionQuery3 (Execution Plan, String).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(site_label@0) as site_label, ENC_PT(wtur_label@1) as wtur_label, ENC_PT(t@3) as t, ENC_PT(val@2) as val]
  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, val@3, t@5]
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, dp@2, val@4]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, dp@4]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, ts@2]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, ts@4]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, generator@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp@2, generator_asp@1)], projection=[site_label@0, wtur_label@1, generator@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, generator_asp@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, gensys@2]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp@2, gensys_asp@1)], projection=[site_label@0, wtur_label@1, gensys@3]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, gensys_asp@3]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, wtur@2, gensys_asp@4]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@1)], projection=[site_label@0, wtur_label@2, wtur@3]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@0)], projection=[site_label@0, wtur_asp@1, wtur_label@3]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site_label@1, wtur_asp@3]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site@0, site_label@2]
                                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as site], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <https://github.com/magbak/chrontext/rds_power#Site>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <https://github.com/magbak/chrontext/rds_power#Site> AND <https://github.com/magbak/chrontext/rds_power#Site> <= object_max@6, required_guarantees=[object in (<https://github.com/magbak/chrontext/rds_power#Site>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
                                  FilterExec: EBV(EQ(ENC_TF(ENC_PT(site_label@1)), 2:{value:Wind Mountain,language:}))
                                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as site, object@3 as site_label], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/2000/01/rdf-schema#label> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/2000/01/rdf-schema#label> AND <http://www.w3.org/2000/01/rdf-schema#label> <= predicate_max@2, required_guarantees=[predicate in (<http://www.w3.org/2000/01/rdf-schema#label>)]
                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as site, object@3 as wtur_asp], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> AND <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>)]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as wtur_asp, object@3 as wtur_label], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/2000/01/rdf-schema#label> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/2000/01/rdf-schema#label> AND <http://www.w3.org/2000/01/rdf-schema#label> <= predicate_max@2, required_guarantees=[predicate in (<http://www.w3.org/2000/01/rdf-schema#label>)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as wtur, object@3 as wtur_asp], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> AND <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as wtur, object@3 as gensys_asp], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> AND <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as wtur], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <https://github.com/magbak/chrontext/rds_power#A> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <https://github.com/magbak/chrontext/rds_power#A> AND <https://github.com/magbak/chrontext/rds_power#A> <= object_max@6, required_guarantees=[object in (<https://github.com/magbak/chrontext/rds_power#A>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as gensys, object@3 as gensys_asp], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> AND <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as gensys], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <https://github.com/magbak/chrontext/rds_power#RA> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <https://github.com/magbak/chrontext/rds_power#RA> AND <https://github.com/magbak/chrontext/rds_power#RA> <= object_max@6, required_guarantees=[object in (<https://github.com/magbak/chrontext/rds_power#RA>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as gensys, object@3 as generator_asp], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> AND <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as generator, object@3 as generator_asp], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> AND <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as generator], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <https://github.com/magbak/chrontext/rds_power#GAA> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <https://github.com/magbak/chrontext/rds_power#GAA> AND <https://github.com/magbak/chrontext/rds_power#GAA> <= object_max@6, required_guarantees=[object in (<https://github.com/magbak/chrontext/rds_power#GAA>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as generator, object@3 as ts], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext#hasTimeseries> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext#hasTimeseries> AND <https://github.com/magbak/chrontext#hasTimeseries> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext#hasTimeseries>)]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as ts], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/2000/01/rdf-schema#label> AND object@3 = "Production" AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/2000/01/rdf-schema#label> AND <http://www.w3.org/2000/01/rdf-schema#label> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= "Production" AND "Production" <= object_max@6, required_guarantees=[object in ("Production"), predicate in (<http://www.w3.org/2000/01/rdf-schema#label>)]
        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as ts, object@3 as dp], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext#hasDataPoint> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext#hasDataPoint> AND <https://github.com/magbak/chrontext#hasDataPoint> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext#hasDataPoint>)]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasValue> ?val], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as dp, object@3 as val], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext#hasValue> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext#hasValue> AND <https://github.com/magbak/chrontext#hasValue> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext#hasValue>)]
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t], blank_node_mode=Variable, file_groups={1 group: [[databases/wind-farm-4/GPOS/delta-parquet-file.zstd.parquet:0..30756398]]}, projection=[subject@1 as dp, object@3 as t], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <https://github.com/magbak/chrontext#hasTimestamp> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <https://github.com/magbak/chrontext#hasTimestamp> AND <https://github.com/magbak/chrontext#hasTimestamp> <= predicate_max@2, required_guarantees=[predicate in (<https://github.com/magbak/chrontext#hasTimestamp>)]
